--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <header></header>
     <section>
       <div class="content-panel">
-        <img src="images/bg_start.png">
+        <p>养殖场角色管理应用</p>
       </div>
       <footer>
-        <a class="normalBtn fillBtn " href="html/login.html">立即体验</a>
+        <a class="normalBtn fillBtn " href="html/1.1.html">立即体验</a>
       </footer>
     </section>
     <nav></nav>
