养殖场角色版本2--下拉选择面板封装以及新增的页面开发

--- a/html/1.1.html
+++ b/html/1.1.html
@@ -19,7 +19,7 @@
             <a class="icon-back" href="../index.html"></a>
             <span class="title">无害化申报</span>
         </header>
-        <section class="main-Panel">
+        <section class="main-Panel includeTab">
             <div class="fixFooterPanel">
                 <div class="tablePanel autoHeight">
                     <ul class="tab-panel">
