--- a/html/3.1.html
+++ b/html/3.1.html
@@ -20,7 +20,7 @@
             <span class="title">养殖环节无害化</span>
             <a class="right_link" href="3.11.html">查询</a>
         </header>
-        <section class="main-Panel">
+        <section class="main-Panel includeTab">
             <div class="fixFooterPanel">
                 <div class="tablePanel autoHeight">
                     <ul class="tab-panel">
