--- a/html/1.112.html
+++ b/html/1.112.html
@@ -17,87 +17,11 @@
 		<div class="commonPage">
 			<header class="toolbar greenToolBar">
 				<a class="icon-back" href="../index.html"></a>
-				<span class="title">申报记录查看</span>
+				<span class="title">查看视频</span>
 			</header>
 			<section class="main-Panel">
-				<div class="selectOut" id="listPanel" style="display: none;">
-					<ul>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-						<li>
-							<a>1 350102 113901 13</a>
-						</li>
-					</ul>
-				</div>
-				<div class="commonPanel">
-					<ul class="common-ul">
-						<li>
-							<span class="grey">养殖场名称</span>
-							<span class="black">温氏猪场</span>
-						</li>
-						<li>
-							<span class="grey">动物种类</span>
-							<span class="black">猪</span>
-						</li>
-						<li>
-							<span class="grey">月存栏量</span>
-							<span class="black">月出栏量</span>
-						</li>
-						<li>
-							<span class="grey">死亡数</span>
-							<span class="black">温氏猪场</span>
-						</li>
-						<li>
-							<span class="grey">耳标号</span>
-							<span class="black">已添加<a>109</a>个耳标号</span>
-							<a class="normalBtn fillBtn pos-ab" id="groupNumber">查看</a>
-						</li>
-						<li>
-							<span class="grey">死亡原因</span>
-							<span class="black">温氏猪场</span>
-						</li>
-						<li>
-							<span class="grey">处理方式</span>
-							<span class="black">深埋</span>
-						</li>
-						<li>
-							<span class="grey">现场视频</span>
-							<a class="normalBtn fillBtn">播放</a>
-						</li>
-						<li class="specailImgPanle">
-							<span class="grey">现场照片</span>
-							<div class="sub-ul-imgList">
-								<div>
-									<img src="../images/pig.png">
-								</div>
-								<div>
-									<img src="../images/pig.png">
-								</div>
-								<div>
-									<img src="../images/pig.png">
-								</div>
-							</div>
-						</li>
-						<li>
-							<span class="grey">现场照片</span>
-							<span class="black">
-								<img src="../images/sign.jpg">
-							</span>
-						</li>
-						</span>
+				<div class="videoPanel">
+					<video src="../video/video1.mp4" controls="controls" autoplay="autoplay" width="100%" height="100%" id="video1"></video>
 				</div>
 			</section>
 		</div>
@@ -106,19 +30,6 @@
 		<script src="../js/common.js"></script>
 		<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
 		<script src="../node_modules/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../js/createGroupPanel.js"></script>
-		<script>
-			$(function() {
-				// 耳标号数据
-				downListData({
-					groupId: 'groupNumber', //触发事件ID，与dom相关
-					groupPanelId: 'groupNumberPanel', //显示面板ID，自定义
-					arr: ['1 21345356 565454', '1 21345356 565454', '1 21345356 565454', '1 21345356 565454', '1 21345356 565454'],
-					isChoose: false, //是否有单选、多选
-					className: 'icon-radio', //单选框class
-				});
-			})
-		</script>
 	</body>
 
 </html>
