--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="welcomePage">
+  <div class="welcomePage" style="position: relative;top: 50%;">
     <header></header>
     <section>
       <div class="content-panel">
